# open-course-rag-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: bm25.yaml  chunking.yaml  dense.yaml  hybrid.yaml
data/raw/: MANIFEST.md  README.md  source_manifest_template.csv
docs/: annotation_protocol.md  benchmark_spec.md
paper/: abstract.md  data_statement.md  outline.md  references.bib
paper/tables/: benchmark_stats.tex  corpus_stats.tex  retrieval_significance.tex
paper_package/: README.md  sample_questions.json  sample_retrieval_results.json  summary_stats.json
paper_package/all_latex_tables/: error_categories.tex  retrieval_main.tex
paper_package/all_retrieval_tables/: error_categories.csv  error_samples.csv  retrieval_by_course.csv  retrieval_by_language.csv  retrieval_by_question_type.csv  retrieval_overall.csv  retrieval_significance.csv
scripts/: assemble_paper_package.py  auto_curate.py  export_latex_tables.py  import_curated_sheet.py  import_grounding_sheet.py  prepare_curation_sheet.py  prepare_grounding_sheet.py
scripts/isambard/: deploy.sh  setup_env.sh  slurm_env.sh
slurm/: 00_scrape.sh  00_setup.sh  01_ingest.sh  02_chunk.sh  03_generate_questions.sh  03b_auto_curate.sh  04_translate.sh  05_retrieve_bm25.sh  06_retrieve_dense.sh  07_retrieve_hybrid.sh  08_eval_retrieval.sh  09_answer_generate.sh  10_plots.sh
src/open_course_rag_benchmark/: __init__.py  answer_generate.py  auto_ground.py  build_benchmark.py  (+16 more)
src/open_course_rag_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_answer_generate.py  test_auto_ground.py  test_json_extraction.py  test_pipeline.py
(+6 files in other folders)
